--- a/angularapp/src/index.html
+++ b/angularapp/src/index.html
@@ -16,7 +16,7 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body class="mat-app-background">
+	<body class="mat-app-background dark-theme">
 		<app-root class="mat-typography"></app-root>
 	</body>
 </html>
